--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Requirements for Image Music Looper
 Pillow>=9.0.0
 pyinstaller>=5.0.0
+moviepy>=1.0.3
 # Note: tkinter is built-in with Python, no need to install
